[tool.poetry]
name = "library-database-bench"
version = "0.1.0"
description = "Test the connection speed of databases for library in bit"
authors = ["felinae98 <731499577@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
selenium = "^3.141.0"
bs4 = "^0.0.1"
requests = "^2.25.0"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
